fix: background + contrast (copy text)

--- a/website/static/css/main_page.css
+++ b/website/static/css/main_page.css
@@ -56,7 +56,7 @@
 .svm_tab {
     text-align: center;
 
-    background:#a13670 ;
+    background:#cd5095 ;
     border-radius: 10px;
     border-style: groove;
     float: left;
@@ -69,7 +69,7 @@
 .neural_tab {
     text-align: center;
 
-    background:#2986cc ;
+    background:#2f93df ;
     border-radius: 10px;
     border-style: groove;
     float: left;
